Separate non-modifying call with empty collection args - Weirdly enough, some Map implementations throw an exception on non-modifying calls but NOT when it's based on an empty collection, such as #removeAll